[tool.poetry]
name = "bls-demo"
version = "0.1.0"
description = ""
authors = ["Robert Schroll <robert@thedataincubator.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipywidgets = "7.5.1"
pandas = "1.1.3"
requests = "2.24.0"
matplotlib = "3.3.2"
seaborn = "0.11.0"
xlrd = "1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
